third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/bool/capitalized-false.stderr
TOML parse error at line 1, column 28
  |
1 | capitalized-false        = False
  |                            ^
invalid string
expected `"`, `'`
